classDiagram
    class User {
        +id: UUID
        +first_name: String
        +last_name: String
        +email: String
        -password: String
        +is_admin: Boolean
        +is_owner: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        +register()
        +update_profile()
        +delete()
    }
    class Place {
        +id: UUID
        +title: String
        +description: String
        +price: Float
        +latitude: Float
        +longitude: Float
        +owner_id: UUID
        +created_at: DateTime
        +updated_at: DateTime
        +create()
        +update()
        +delete()
        +list()
    }
    class Review {
        +id: UUID
        +place_id: UUID
        +user_id: UUID
        +rating: Integer
        +comment: String
        +created_at: DateTime
        +updated_at: DateTime
        +create()
        +update()
        +delete()
        +list_by_place()
    }
    class Amenity {
        +id: UUID
        +name: String
        +description: String
        +created_at: DateTime
        +updated_at: DateTime
        +create()
        +update()
        +delete()
        +list()
    }
    User "1" --> "n" Place : owns
    User "1" o-- "n" Review : writes
    Place "1" *-- "n" Review : has
    Place "n" o-- "n" Amenity : includes